# rust-zynqmp

./: .dir-locals.el  .gitlab-ci.plan  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE.Apache-2.0  README.md  memory.x
.cargo/: config.toml
.gaia-report-generator/expectations/: x86_64-linux.json  x86_64-windows64.json
.gitlab/issue_templates/: Release.md
cortex-a-rt/: Cargo.toml  README.md  build.rs  link.x
cortex-a-rt/.cargo/: config.toml
cortex-a-rt/examples/: data_sections.rs  floating_point.rs  interrupt.rs  main.rs  uart.rs
cortex-a-rt/src/: crl_apb.rs  lib.rs  mmu.rs  start.S  uart.rs
examples/: libtest.stdout
examples/libtest/: Cargo.toml  README.md
examples/libtest/.cargo/: config.toml
examples/libtest/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
zynqmp/: Cargo.toml  DEVELOPMENT.md  README.md  link.x
zynqmp/.cargo/: config.toml
zynqmp/examples/: data_sections.rs  floating_point.rs  interrupt.rs  newlib.rs  newlib.stdout  uart.rs  uart.stdout
zynqmp/src/: crl_apb.rs  lib.rs  mmu.rs  newlib.rs  start.S  uart.rs  vectors.S
