[package]
name = "zynqmp"
description = "Board support crate for the AMD UltraScale Zynq MPSoC"
documentation = "https://docs.adacore.com/live/wave/rust/html/rust_ug/rust_ug/platform_specific_information.html#aarch64-bare-metal"
# The version is set during packaging.
version = "0.0.0"
license = "Apache-2.0"
edition = "2024"

[dependencies]
aarch64-cpu = "10.0.0"
arbitrary-int = "1.3.0"
arm-gic = "0.6.1"
bitbybit = "1.3.3"
derive-mmio = "0.6.0"
embedded-io = "0.6.1"

[dev-dependencies]
qemu-exit = "3.0.2"
