[package]
name = "adacore-zynqmp"
version = "0.0.0"
edition = "2024"
description = "Support for the AMD Zynq UltraScale+ MPSoC"
repository = "https://github.com/AdaCore/rust-zynqmp"
license = "Apache-2.0"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "arm64",
    "aarch64",
    "embedded",
    "no-std",
]
exclude = [".*", "DEVELOPMENT.md"]

[dependencies]
aarch64-cpu = "10.0.0"
arbitrary-int = "1.3.0"
arm-gic = "0.6.1"
bitbybit = "1.3.3"
derive-mmio = "0.6.0"
embedded-io = "0.6.1"
spin = { version = "0.10.0", features = ["lazy"] }

[dev-dependencies]
qemu-exit = "3.0.2"

[features]
std = []
